fixed responsiveness on mobile devices

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -11,7 +11,7 @@
     align-items: center;
     width: 100%;
     box-shadow: $box-shadow;
-    margin: 10px 0;
+    margin: 5px 0;
     cursor: pointer;
     // padding: 5px 0 5px 5px;
 
